--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h5><b>C</b></h5>
           </li>
           <li class="collection-item"><a href="#">Cathy</a></li>
-          <li class="collection-item"><a href="#">Carol</a></li>
+          <li class="collection-item"><a href="#">Cuminla</a></li>
           <li class="collection-item"><a href="#">Cammie</a></li>
           <li class="collection-item"><a href="#">Cucumber</a></li>
         </ul>
